# Python-arabic-converter-to-readiable-text-

./: README.md  pyproject.toml  setup.cfg  setup.py
arabic/: pyvenv.cfg
arabic/Scripts/: activate  activate.bat
src/arabic_bdr_pro/: main.py
