[metadata]
name = arabic
version = 1.0.0
author = Bader
author_email = baderalotaibi3@gmail.com
description = arabic_python_text converter to readiable form
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BDR-PRO/arabic_python_text
project_urls =
    Bug Tracker = https://github.com/BDR-PRO/arabic_python_text/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
